2002-06-10  Per Bothner  <per@bothner.com>

	* arrays.scm:  New file, with procedures for SRFI-25.

2002-05-17  Per Bothner  <per@bothner.com>

	* misc.scm (null-environment):  Should take a versio number, according
	to R5RS.  Bug reported by Dr. M. Luedde <Mirko.Luedde@Computer.Org>.

2002-03-21  Per Bothner  <per@bothner.com>

	* lists.scm (memq, memv, member, assq, assv, assoc): New procedures.

	* syntax.scm (cond-expand):  New syntax, from srfi-0.

	* syntax.scm (receive):  New syntax, from srfi-8.

2001-11-12  Per Bothner  <per@bothner.com>

	* ports.scm (current-input-port):  New procedure.

2001-11-05  Per Bothner  <per@bothner.com>

	* files.scm, keywords.scm, lists.scm, misc.scm, numbers.scm, ports.scm,
	reflection.scm:  Various updates to avoid using <String> in conjunction
	with a primite-xxx-mmethod macro, which can cause some confusion.
	Mostly use invoke, invoke-static, or make, plus more type declarations.

2001-11-05  Per Bothner  <per@bothner.com>

	* syntax.scm:  Add Lars T Hansen's implementation of let-values
	and let*values.  [srfi-11]

Weiqi Gao <weiqigao@networkusa.net>

	* ports.scm (set-input-port-line-number!):  Fix typo.

2001-08-30  Per Bothner  <per@bothner.com>

	* reflection.scm (record-type-name):  Assume reversible mangling.

2001-08-24  Per Bothner  <per@bothner.com>

	* syntax.scm (this):  Remove - now implemented by thisRef class.

2001-08-17  Per Bothner  <per@bothner.com>

	*  reflection.scm (record-type-name):  Update demangleName's class.

2001-07-17  Per Bothner  <per@bothner.com>

	* windows.scm:  New file, only compiled if --with-awt.
	misc.scm (scheme-window):  Moved to windows.scm.
	* Makefile.am:  Compile windows.scm, but only when --with-awt.

2001-06-17  Per Bothner  <per@bothner.com>

	* misc.scm (procedure?):  Return #f if a Binding (CLisp symbol).

2001-06-03  Per Bothner  <per@bothner.com>

	* thread.scm (exit): Call OutPort.runCleanups.

	* ports.scm (write, display):  No longer written in Scheme - boo-hoo.
